RB-62: Remove password protected boards, update to bootstrap 5.0, fixed overlap caused by upgrade, added new breakpoint

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -49,7 +49,7 @@ body {
 .rb-card {
   background: rgb(109, 207, 246);
   background: linear-gradient(0deg, rgba(109, 207, 246, 1) 0%, rgba(13, 170, 237, 1) 35%, rgba(7, 126, 199, 1) 60%, rgba(1, 45, 120, 1) 100%);
-  width: 350px;
+  width: 330px;
   height: 200px;
   border-radius: 30px;
   -moz-border-radius: 30px 30px 0 0;
@@ -94,17 +94,17 @@ body {
 
 .form-open {
   top: 150px;
-  left: 300px;
+  left: 280px;
 }
 
 .form-delete {
   top: 150px;
-  left: 250px;
+  left: 230px;
 }
 
 .form-export {
   top: 150px;
-  left: 200px;
+  left: 180px;
 }
 
 .btn-rounded {
